force-app/main/default/objects/UnifiedssotContactPointPhoneTun1__dlm/UnifiedssotContactPointPhoneTun1__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Derived</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityName>UnifiedContactPointPhone</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>