force-app/main/default/objects/UnifiedssotContactPointPhoneTun1__dlm/fields/rel_1712301889757_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712301889757_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedssotContactPointPhoneTun1_sso_rel</label>
    <referenceTo>UnifiedssotIndividualTun1__dlm</referenceTo>
    <relationshipLabel>UnifiedssotContactPointPhoneTun1_sso_rel</relationshipLabel>
    <relationshipName>rel_1712301889757_end</relationshipName>
    <type>Lookup</type>
</CustomField>