force-app/main/default/objects/UnifiedssotContactPointPhoneTun1__dlm/fields/ssot__FormattedE164PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__FormattedE164PhoneNumber__c</fullName>
    <label>Formatted E164 Phone Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FormattedE164PhoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>